edge cases and clean-up

--- a/src/index.css
+++ b/src/index.css
@@ -107,6 +107,7 @@ ul li {
   background-color: lightgreen;
   margin-bottom: 0.25em;
   max-width: 25em;
+  padding: 0.25em;
 }
 
 .numeric-input {
